--- a/Supervised Learning/Regression/Regression.ipynb
+++ b/Supervised Learning/Regression/Regression.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/drive/15giafLp0z0hY-zqPpXiM3U11uAneqyUm?usp=sharing" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/drive/15giafLp0z0hY-zqPpXiM3U11uAneqyUm?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
