--- a/Supervised Learning/Regression/Regression.ipynb
+++ b/Supervised Learning/Regression/Regression.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "LinearRegression.ipynb",
+      "name": "Regression.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "B2EBZk3FdGSX",
@@ -60,7 +60,7 @@
         "1. If you really want to learn these things with me, it's better to start coding what we learn by yourself as well and just see if our results match. If they do, awesome! Just don't forget to compare and always try to get the best code possible (not saying that mine is the best at all, but I hope to be a good example). That's just the best way to learn both coding in python (if you're new like me) and the **machine learning** concepts that this documentation offers.\n",
         "1. If you're reading on Github, I'd recommend to open it with the google colab, so you can benefit from the next 3 recommendations.\n",
         "1. Open the **_table of contents_** tab on the top left of the tab, it's those 3 lines. This way you can easily see where you currently are in the document and go to wherever you want quicker as well.\n",
-        "1. Start executing every piece of code that in the document. You can do that by accessing **_Runtime_** -> **_Run all_** or pressing $F9$ in your keyboard. That way you'll save some time and be sure to understand all the possible jokes in the document.\n",
+        "1. Start executing every piece of code that is in the document. You can do that by accessing **_Runtime_** -> **_Run all_** or pressing _CTRL + F9_ in your keyboard. That way you'll save some time and will for sure to understand all the possible jokes in the document.\n",
         "1. Access the **_Settings_** (Top right or **_Tools_** -> **_Setting_**) -> **_Miscellaneous_** and activate **Corgi mode** and **Kitty mode**, or just the one you like the most. I'm sure that it'll boost your mood a lot while reading this documentation xD.\n",
         "\n",
         "Hope you enjoy and learn something out of it :)"
@@ -74,13 +74,13 @@
           "height": 38
         },
         "id": "YybEzVdF-6gX",
-        "outputId": "6524e0bb-7d8d-466d-81fc-88b4f3a750a9"
+        "outputId": "6cbb3527-ae9a-478a-8616-d39dee5f274b"
       },
       "source": [
         "%%html\n",
         "<marquee style='width: 30%; color: red;'><b>IIIIIIIIIIIIIIIIIIIIIIIIIIT'S TIIIIIIIIIIIIIIMEEEEEEEEEE!</b></marquee>"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -175,12 +175,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "HpN3fxJaNzDN"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import math"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "8AqvZKLgR3Cq",
-        "outputId": "2ff91a34-699f-43f8-ccab-1f8e72851a64"
+        "outputId": "ffe1df09-5101-4642-aac3-f64bc660fe57"
       },
       "source": [
         "x1 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
@@ -214,19 +227,19 @@
         "fig5, ax5 = plt.subplots(figsize=(8,5))\n",
         "ax5.scatter(x5, y5)"
       ],
-      "execution_count": 68,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f735dde6b00>"
+              "<matplotlib.collections.PathCollection at 0x7fc15f86c908>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -319,19 +332,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HpN3fxJaNzDN"
-      },
-      "source": [
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import math"
-      ],
-      "execution_count": 47,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "B13ZBrV8L8hG"
       },
       "source": [
@@ -364,7 +364,7 @@
         "\n",
         "  return correlation_value"
       ],
-      "execution_count": 48,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -385,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c6N-7yEpLrgV",
-        "outputId": "5e1c8afd-9fff-4115-c529-c6bfe0d07b4a"
+        "outputId": "bf8cb53d-58e3-4fbb-a8d2-c6daa417e521"
       },
       "source": [
         "print('x1-y1:',correlation(x1, y1))\n",
@@ -394,7 +394,7 @@
         "print('x4-y4:',correlation(x4, y4))\n",
         "print('x5-y5:',correlation(x5, y5))"
       ],
-      "execution_count": 66,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
           "height": 367
         },
         "id": "KDC-gXNz5EHZ",
-        "outputId": "048c95a7-9757-4091-e109-892c76035851"
+        "outputId": "6ec7a2d4-3f61-43bd-bf93-e709c34d8ded"
       },
       "source": [
         "x = [250,280,350,480,530,625,750,271,1430,1245,1000]\n",
@@ -469,9 +469,9 @@
         "ax.set_xlabel('X', color='white')\n",
         "ax.set_ylabel('Y', color='white')\n",
         "\n",
-        "ax.set_title('Data correlation rate: ' + str(correlacao(x, y)), color='white')"
+        "ax.set_title('Data correlation rate: ' + str(correlation(x, y)), color='white')"
       ],
-      "execution_count": 73,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +483,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -560,7 +560,7 @@
           "height": 367
         },
         "id": "NHH-nlHT58Ms",
-        "outputId": "dcbb061d-0872-465b-8eb4-981f55619c0b"
+        "outputId": "fc87433a-266c-4219-9812-9cba90c287e5"
       },
       "source": [
         "# Calculate β1 first\n",
@@ -597,9 +597,9 @@
         "ax.set_xlabel('X', color='white')\n",
         "ax.set_ylabel('Y', color='white')\n",
         "\n",
-        "ax.set_title(\"Data correlation rate: \" + str(correlacao(x, y)), color='white')"
+        "ax.set_title(\"Data correlation rate: \" + str(correlation(x, y)), color='white')"
       ],
-      "execution_count": 74,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,7 +611,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 74
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -646,12 +646,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UAAHq_zPYK6I",
-        "outputId": "ad0b2514-4d97-4f82-9378-9eb1e84290f9"
+        "outputId": "eb302562-aa66-47e5-d0e1-09fbf34a642c"
       },
       "source": [
         "print('A house with 1850m² should have a price near $' + str(beta_0 + beta_1 * 1850), 'thousands of dollars.')"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
