--- a/Supervised Learning/Regression/Regression.ipynb
+++ b/Supervised Learning/Regression/Regression.ipynb
@@ -17,16 +17,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/drive/15giafLp0z0hY-zqPpXiM3U11uAneqyUm?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "DmA10CYT8zgB"
       },
       "source": [
@@ -1363,7 +1353,7 @@
         "\n",
         "Well, now we know how to do a multilinear regression. UHUUUUUUUU!!!!\n",
         "\n",
-        "Play as much as you want with the .csv that we used for this examples, try some 4, 5, 6 or even all of the types of data to see what it returns to you. Just remember that in the file we have date and string values, so you'll need to treat it to be able to get something good out of it.\n",
+        "Play as much as you want with the .csv that we used for this examples, try some 4, 5, 6 or even all of the types of data to see what it returns to you. Just remember that in the file we have date and string values, so you'll need to treat them to be able to get something good out of it.\n",
         "\n",
         "After playing a little with the file, let's advance some nice polynomial regression, shall we?"
       ]
