--- a/Supervised Learning/Regression/Regression.ipynb
+++ b/Supervised Learning/Regression/Regression.ipynb
@@ -17,6 +17,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/drive/15giafLp0z0hY-zqPpXiM3U11uAneqyUm?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "DmA10CYT8zgB"
       },
       "source": [
